# downloadManager

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
lib/: CMakeLists.txt
lib/glad/include/glad/: gl.h
resources/: notARealLicenses.txt
src/: main.cpp
src/core/: application.cpp  application.h  window.cpp  window.h
src/download/: downloadManager.cpp  downloadManager.h  downloadMetadata.h  downloadQueue.cpp  downloadQueue.h  downloadScheduler.cpp  downloadScheduler.h  downloadTask.h  downloadWorker.cpp  downloadWorker.h
src/job/: jobManager.cpp  jobManager.h  task.h  threadSafeQueue.h  workerThread.cpp  workerThread.h
src/model/: image_container.h
src/ui/: applicationGui.cpp  applicationGui.h  ui.cpp  ui.h  uiElement.h
src/utility/: joinThreads.h  threadPool.cpp  threadPool.h  threadSafeQueue.cpp  threadSafeQueue.h  threadSafeVector.h  utility.h
src/window/: appWindow.cpp  appWindow.h
